--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@types/react-redux": "^7.1.34",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.27.1",
+    "connected-react-router": "^6.9.3",
     "dayjs": "^1.11.13",
     "history": "^4.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^5.3.4"
+    "react-redux": "^8.1.3",
+    "react-router-cache-route": "^1.13.0",
+    "react-router-dom": "^5.3.4",
+    "redux": "^4.2.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
